@@ -1,4 +1,6 @@
 20020620
+ - (bal) Fixed AIX environment handling, use setpcred() instead of existing
+   code.  (Bugzilla Bug 261)
  - (bal) OpenBSD CVS Sync
    - todd@cvs.openbsd.org 2002/06/14 21:35:00
      [monitor_wrap.c]
@@ -931,4 +933,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2217 2002/06/20 23:53:53 mouring Exp $
+$Id: ChangeLog,v 1.2218 2002/06/21 00:01:18 mouring Exp $
